Shang New Live/src/objects/Chart_of_Accounts__c.object
<CustomObject>
    <description>Chart of Accounts</description>
    <fields>
        <fullName>Acc_Code_Description__c</fullName>
        <description>Accounts Code Description</description>
        <label>Acc Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_Code_Entry_Type__c</fullName>
        <label>Acc Code Entry Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Journal Entry Account</fullName>
                </value>
                <value>
                    <fullName>Heading Account (No JE)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acc_Code_Sort_Number__c</fullName>
        <description>Used for Sorting the Chart of Accounts</description>
        <label>Acc Code Sort Number</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acc_Code_Tax_Type__c</fullName>
        <label>Acc Code Tax Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                </value>
                <value>
                    <fullName>Tax Exempt</fullName>
                </value>
                <value>
                    <fullName>Zero Rated Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acc_Code_Type__c</fullName>
        <label>Acc Code Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Other Revenue</fullName>
                </value>
                <value>
                    <fullName>Advance Revenue</fullName>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>Direct Cost</fullName>
                </value>
                <value>
                    <fullName>Overhead</fullName>
                </value>
                <value>
                    <fullName>Salary and Benefits</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Depreciation</fullName>
                </value>
                <value>
                    <fullName>Exchange Gain/Loss</fullName>
                </value>
                <value>
                    <fullName>Exchange Gain</fullName>
                </value>
                <value>
                    <fullName>Exchange Loss</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Current Assets</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Current Receivables</fullName>
                </value>
                <value>
                    <fullName>Non-Current Assets</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Current Liabilities</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>Retained Earnings</fullName>
                </value>
                <value>
                    <fullName>Dividends</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accounts_Code__c</fullName>
        <label>Accounts Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COA_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COA Group</label>
        <referenceTo>Chart_of_Accounts_Group__c</referenceTo>
        <relationshipLabel>Chart of Accounts</relationshipLabel>
        <relationshipName>Chart_of_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Chart of Accounts</label>
    <nameField>
        <label>Chart of Accounts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chart of Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>